--- a/pedido.ipynb
+++ b/pedido.ipynb
@@ -66,7 +66,7 @@
       "source": [
         "def api():\n",
         "\n",
-        "    with open('/content/drive/MyDrive/Teste/pedidos.json') as file_json:\n",
+        "    with open('pedidos.json') as file_json:\n",
         "        dados = json.load(file_json)\n",
         "    return dados\n"
       ],
@@ -95,7 +95,7 @@
         "  key = list(_filters.keys())[0]\n",
         "  value = list(_filters.values())[0]\n",
         "  \n",
-        "  with open('/content/drive/MyDrive/Teste/orders.json') as file_json:\n",
+        "  with open('orders.json') as file_json:\n",
         "     dados = json.load(file_json)\n",
         "  #percorre o json, e retorna o key e o value iguais ao informado no filtro\n",
         "  dados_filter = [i for i in dados if i[key] == value]\n",
@@ -148,7 +148,7 @@
       "source": [
         "def get_inventory_entries(_sku):\n",
         "\n",
-        "   with open('/content/drive/MyDrive/Teste/inventory.json') as file_json:\n",
+        "   with open('inventory.json') as file_json:\n",
         "      dados = json.load(file_json)\n",
         "      dados_filter = [i for i in dados if i['sku'] == _sku]\n",
         "      return dados_filter"
